Changed Colab File to a Jupyter notebook. Fixed Heading Errors

--- a/VideoGame_PythonDataAnalysis_DavidLayne.ipynb
+++ b/VideoGame_PythonDataAnalysis_DavidLayne.ipynb
@@ -1,62 +1,47 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNdvz8UnMOqVQsTzbme2Bjz",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "nArlj_N_Nwpj"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/djl514/VideoGame_DataAnalysis/blob/main/VideoGame_PythonDataAnalysis_DavidLayne.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<h1>Video Game Data Analysis<h1>"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Video Game Data Analysis"
-      ],
-      "metadata": {
-        "id": "nArlj_N_Nwpj"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Introduction:\n",
-        "\n",
-        "In this Python Notebook I seek to test myself with the very building blocks of the language. Creating a comprehensive dictionary containing data on various video games with information on the name, price, system, dlc, and series of each game."
-      ],
       "metadata": {
         "id": "l0cNoAiFNhsJ"
-      }
+      },
+      "source": [
+        "<h2>Introduction:<h2>"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "####Game Data"
-      ],
+        "\n",
+        "In this Python Notebook I seek to test myself with the very building blocks of the language. Creating a comprehensive dictionary containing data on various video games with information on the name, price, system, dlc, and series of each game."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "_TihpovDfLHV"
-      }
+      },
+      "source": [
+        "<h4>Game Data<h4>"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_r0_rMn7RBZV"
+      },
+      "outputs": [],
       "source": [
         "#creating a dictionary\n",
         "#nested dictionaries within along with nested lists\n",
@@ -157,47 +142,20 @@
         "    }\n",
         "\n",
         "}"
-      ],
-      "metadata": {
-        "id": "_r0_rMn7RBZV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Functions to return games with DLCs and Series Information"
-      ],
       "metadata": {
         "id": "n3fSfHAyfNxd"
-      }
+      },
+      "source": [
+        "<h4>Functions to return games with DLCs and Series Information<h4>"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#function to return all games with DLC and lists each DLC for each game and returns total price of games and dlc\n",
-        "\n",
-        "def game_dlc(data):\n",
-        "  total_price = 0\n",
-        "\n",
-        "  print('Games with DLC')\n",
-        "  print(20*'-')\n",
-        "\n",
-        "  for game, info in data.items():\n",
-        "    if info['dlc'] == True:\n",
-        "      print(f\"Name: {info['name']}\\nPrice: ${info['price']}\\nSystem: {info['system']}\")\n",
-        "      total_price += info['price']\n",
-        "\n",
-        "      for key, dlc in info['dlcInfo'].items():\n",
-        "        print(f\"\\tDLC Name: {dlc['name']}\\n\\tDLC Price: ${dlc['price']}\")\n",
-        "        total_price += dlc['price']\n",
-        "      print(f'Total Price: ${total_price:.2f}')\n",
-        "      print('\\n')\n",
-        "      total_price = 0\n",
-        "\n",
-        "game_dlc(game_data)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -205,11 +163,10 @@
         "id": "sC9_NglqVFO9",
         "outputId": "8c28c931-eade-4ae2-fdb1-3225ac00ddff"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Games with DLC\n",
             "--------------------\n",
@@ -245,28 +202,34 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "#function to return all games with DLC and lists each DLC for each game and returns total price of games and dlc\n",
+        "\n",
+        "def game_dlc(data):\n",
+        "  total_price = 0\n",
+        "\n",
+        "  print('Games with DLC')\n",
+        "  print(20*'-')\n",
+        "\n",
+        "  for game, info in data.items():\n",
+        "    if info['dlc'] == True:\n",
+        "      print(f\"Name: {info['name']}\\nPrice: ${info['price']}\\nSystem: {info['system']}\")\n",
+        "      total_price += info['price']\n",
+        "\n",
+        "      for key, dlc in info['dlcInfo'].items():\n",
+        "        print(f\"\\tDLC Name: {dlc['name']}\\n\\tDLC Price: ${dlc['price']}\")\n",
+        "        total_price += dlc['price']\n",
+        "      print(f'Total Price: ${total_price:.2f}')\n",
+        "      print('\\n')\n",
+        "      total_price = 0\n",
+        "\n",
+        "game_dlc(game_data)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#function to print games within a series, that game information along with the number of games in the series\n",
-        "def game_series(data):\n",
-        "  print('Games in a Series')\n",
-        "  print(20*'-')\n",
-        "\n",
-        "  for game, info in data.items():\n",
-        "    if info['series'] == True:\n",
-        "      print(f\"Name: {info['name']}\\nPrice: ${info['price']}\\nSystem: {info['system']}\")\n",
-        "      print(\"Games in the Series:\")\n",
-        "\n",
-        "      for series in info['seriesInfo']:\n",
-        "        print('\\t',series)\n",
-        "\n",
-        "      print(f\"Number of Games in the Series: {len(info['seriesInfo'])}\")\n",
-        "\n",
-        "game_series(game_data)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -274,11 +237,10 @@
         "id": "CJagETj-hDtn",
         "outputId": "9f5263cd-7ca5-41b1-834b-92e7517ab94b"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Games in a Series\n",
             "--------------------\n",
@@ -325,21 +287,86 @@
             "Number of Games in the Series: 1\n"
           ]
         }
+      ],
+      "source": [
+        "#function to print games within a series, that game information along with the number of games in the series\n",
+        "def game_series(data):\n",
+        "  print('Games in a Series')\n",
+        "  print(20*'-')\n",
+        "\n",
+        "  for game, info in data.items():\n",
+        "    if info['series'] == True:\n",
+        "      print(f\"Name: {info['name']}\\nPrice: ${info['price']}\\nSystem: {info['system']}\")\n",
+        "      print(\"Games in the Series:\")\n",
+        "\n",
+        "      for series in info['seriesInfo']:\n",
+        "        print('\\t',series)\n",
+        "\n",
+        "      print(f\"Number of Games in the Series: {len(info['seriesInfo'])}\")\n",
+        "\n",
+        "game_series(game_data)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "####User Shopping Cart and Receipt:\n",
-        "\n",
-        "Function serving as a shopping cart for the user, giving them the option to add a game to a cart and purchase the corresponding DLC if applicable. The loop ends when the user types checkout."
-      ],
       "metadata": {
         "id": "vT8dy5icRHRM"
-      }
+      },
+      "source": [
+        "<h4>User Shopping Cart and Receipt:<h4>\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Function serving as a shopping cart for the user, giving them the option to add a game to a cart and purchase the corresponding DLC if applicable. The loop ends when the user types checkout."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "szwG95PWocHI",
+        "outputId": "2854398c-0971-43f3-e0bf-3e6cdfb4b93d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Game catalog\n",
+            "G000: Super Mario Odyssey\n",
+            "G001: The Legend of Zelda: Breath of the Wild\n",
+            "G002: Mario Kart 8 Deluxe\n",
+            "G003: Cuphead\n",
+            "G004: Hollow Knight\n",
+            "G005: Super Mario 3D World\n",
+            "G006: Stardew Valley\n",
+            "add or checkout: add\n",
+            "Enter a Game ID: G003\n",
+            "Cuphead\n",
+            "Price: $19.99\n",
+            "DLC Status: True\n",
+            "dlc1: The Delicious Last Course\n",
+            "Enter a DLC id: dlc1\n",
+            "Name: The Delicious Last Course\n",
+            "Price: $14.99\n",
+            "Would you buy the DLC? (y/n) y\n",
+            "Game Added to order\n",
+            "add or checkout: checkout \n",
+            "ERROR! Try Again\n",
+            "add or checkout: checkout\n",
+            "Order Summary\n",
+            "--------------------\n",
+            "Cuphead\n",
+            "34.98\n"
+          ]
+        }
+      ],
       "source": [
         "#function to create an order and print a receipt\n",
         "orders = []\n",
@@ -423,58 +450,21 @@
         "\n",
         "\n",
         "shopping_cart(game_data)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "szwG95PWocHI",
-        "outputId": "2854398c-0971-43f3-e0bf-3e6cdfb4b93d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Game catalog\n",
-            "G000: Super Mario Odyssey\n",
-            "G001: The Legend of Zelda: Breath of the Wild\n",
-            "G002: Mario Kart 8 Deluxe\n",
-            "G003: Cuphead\n",
-            "G004: Hollow Knight\n",
-            "G005: Super Mario 3D World\n",
-            "G006: Stardew Valley\n",
-            "add or checkout: add\n",
-            "Enter a Game ID: G003\n",
-            "Cuphead\n",
-            "Price: $19.99\n",
-            "DLC Status: True\n",
-            "dlc1: The Delicious Last Course\n",
-            "Enter a DLC id: dlc1\n",
-            "Name: The Delicious Last Course\n",
-            "Price: $14.99\n",
-            "Would you buy the DLC? (y/n) y\n",
-            "Game Added to order\n",
-            "add or checkout: checkout \n",
-            "ERROR! Try Again\n",
-            "add or checkout: checkout\n",
-            "Order Summary\n",
-            "--------------------\n",
-            "Cuphead\n",
-            "34.98\n"
-          ]
-        }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "PIJ9t-UJPh2e"
-      },
-      "execution_count": null,
-      "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
